# jmap-proxy

./: .env.example  Cargo.toml
src/: auth.rs  error.rs  imap.rs  jmap.rs  main.rs  routes.rs  state.rs
src/jmap/: mailbox.rs  method.rs  rfc8620.rs
