[package]
name = "jmap-proxy"
version = "0.1.0"
authors = ["Leah <github.leah@hrmny.sh>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
base64 = "0.13"
flurry = "0.3"

futures = "0.3"
async-trait = "0.1"
async-native-tls = "0.3"

tide-tracing = "0.0.10"

async-imap = "0.5"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.strum]
version = "0.20"
features = [
    "derive"
]

[dependencies.tide]
version = "0.16"
default-features = false
features = [
    "h1-server",
    "sessions",
]

[dependencies.async-std]
version = "1.9"
features = ["attributes"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["raw_value"]
